--- a/main.css
+++ b/main.css
@@ -1,16 +1,34 @@
-#table-container{
-
-    width: 350px;
-    height: 420px;
-    margin: 0 auto
-}
-table{
-    margin: auto 0;
-    width: 25%;
-}
-table td{
-    width:62px;
-    height: 62px;
-    border: 5px solid black
+* {
+  margin: 0;
+  padding: 0;
 }
 
+html,
+body {
+  height: 100%;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+#container {
+  display: flex;
+  background-color: black;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  flex-direction: column;
+}
+
+header {
+  border-bottom: 1px solid #686869;
+}
+
+.title {
+  color: gainsboro;
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin: 0.4rem 0 0.4rem;
+  text-align: center;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
