--- a/main.css
+++ b/main.css
@@ -32,3 +32,26 @@ header {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+
+#board-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* Flex-grow sets the growth of an element by a specific factor. https://developer.mozilla.org/en-US/docs/Web/CSS/flex-grow */
+  flex-grow: 1;
+  overflow: hidden;
+}
+
+#board {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 5px;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.square {
+  border: 2px solid #686869;
+  min-width: 60px;
+  min-height: 60px;
+}
